# syndactyl

./: .gitignore  Cargo.toml  README.md  TESTING.md  config.example.json  example_config.json
docs/: HMAC-AUTHENTICATION.md  ROADMAP.md  architecture-diagram.html  architecture-diagram.md  encryption-security-analysis.html  network-topology-examples.md  network-topology.html  post-quantum-analysis.html  post-quantum-implementation-options.md  project-analysis-and-recommendations.md
src/: main.rs
src/core/: auth.rs  config.rs  file_handler.rs  mod.rs  models.rs  observer.rs
src/network/: behaviour.rs  behaviour.rs.old  manager.rs  mod.rs  p2p.rs  syndactyl_behaviour.rs  syndactyl_p2p.rs  transfer.rs
