[package]
name = "syndactyl"
version = "0.1.0"
edition = "2024"

[dependencies]
notify = { version = "8.1.0" }
futures = { version = "0.3.31" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0" }
dirs = { version = "6.0.0" }
tokio = { version = "1", features = ["full"] }
