[package]
name = "syndactyl"
version = "0.1.0"
edition = "2024"

[dependencies]
notify = { version = "8.1.0" }
futures = { version = "0.3.31" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0" }
dirs = { version = "6.0.0" }
libp2p = { path="../../../github/rust/rust-libp2p/libp2p", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "tokio", "request-response", "cbor"] }
libp2p-swarm-derive = { version = "0.35" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
sha2 = { version = "0.10" }

[dev-dependencies]
tempfile = { version = "3.8" }
